--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
 spring.application.name=assignment14
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
-#spring.datasource.url = jdbc:mysql://localhost:3306/chat_app
-#spring.datasource.username =
-#spring.datasource.password =
+spring.datasource.url = none
 
-# none, create, create-drop, update
-spring.jpa.hibernate.ddl-auto = create-drop
-spring.jpa.show-sql = true
 
-spring.thymeleaf.cache = false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
